--- a/reddash/app/dashboard/templates/index.html
+++ b/reddash/app/dashboard/templates/index.html
@@ -56,7 +56,7 @@
   <div class="col-lg-4">
     <div class="card card-chart">
       <div class="card-header">
-        <h5 class="card-category">{{ _('Total Users') }}</h5>
+        <h5 class="card-category">{{ _('Total Users (Not Accurate)') }}</h5>
         <h3 class="card-title"><i class="tim-icons icon-single-02 text-info"></i><span id="users">{{ variables['ui']['stats']['users'] }}</span>
         </h3>
       </div>
